--- a/src/app/components/settings-toolbar/settings-toolbar.component.scss
+++ b/src/app/components/settings-toolbar/settings-toolbar.component.scss
@@ -1,3 +1,8 @@
 .back-button {
   color: white;
 }
+.header{
+  text-align: center;
+  width: 80%;
+  align-content: center;
+}
